fix: floating label misalignment

--- a/packages/material/scss/input/_layout.scss
+++ b/packages/material/scss/input/_layout.scss
@@ -49,7 +49,7 @@
         }
     }
 
-    .k-textbox-container {
+    .k-textarea-wrapper {
         &.k-state-focused > .k-label {
             top: calc( #{$floating-label-height} + #{$input-border-width} + #{$input-padding-y} - 10px );
             padding: 0 $textarea-floating-label-padding;
